# droombot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml  ci.yaml
docs/: containers.md
scripts/: entrypoint.sh
src/droombot/: api.py  bot.py  cli.py  config.py  log.py  models.py  utils.py  version.py  worker.py
tests/: test_dummy.py  test_models.py
