[tool.poetry]
name = "droombot"
version = "0.1.0"
description = "Discord Bot for generating images from text prompts"
authors = ["Sander Bollen <sander@sndrtj.eu>"]
readme = "README.md"
packages = [
    {include = "droombot", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {version ="^3.8.4", extras = ['speedups'] }
pydantic = "^1.10.7"
click = "^8.1.3"
py-cord = {extras = ["speed"], version = "^2.4.1"}
redis = "^4.5.4"
aiolimiter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
isort = "^5.12.0"
ruff = "^0.0.259"
pytest = "^7.2.2"
pre-commit = "^3.2.1"
types-redis = "^4.5.4.1"

[tool.poetry.scripts]
droombot = 'droombot.cli:cli'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
